# stereo_saiyan

./: bible.md
dragonite/: sqitch.conf  sqitch.plan
lugia/: .env  Cargo.toml
lugia/crates/app/: Cargo.toml
lugia/crates/app/src/: dtos.rs  errors.rs  services.rs
lugia/crates/domain/: Cargo.toml
lugia/crates/domain/src/: entities.rs  errors.rs  lib.rs  repository_traits.rs  value_objects.rs
lugia/crates/infra/: Cargo.toml
lugia/crates/infra/src/: db.rs  errors.rs  lib.rs  models.rs  repositories.rs  schema.rs
lugia/src/: main.rs
lugia/src/routes/: mod.rs
